2008-06-28  Inge Wallin  <inge@lysator.liu.se>

	Fix warnings
	* src/plugins/marble/stars/MarbleStarsPlugin.cpp (render): use QRectF for floating point sizes of the stars.
	* src/lib/Projections/MercatorProjection.cpp (geoCoordinates): remove unused vars
	* src/lib/MarbleAbstractFloatItem.cpp (misc): mark unused parameters
	* src/lib/geodata/scene/GeoScenePalette.cpp: Add newline
	* src/lib/geodata/scene/GeoSceneLayer.h (constructor): initialize in right order

2008-06-27  Inge Wallin  <inge@lysator.liu.se>

	Link!
	* src/lib/tests/CMakeLists.txt: Add necessary qt libs and fix a bug.

	Compile!  (still doesn't link)
	* src/lib/global.h: include QString.h

2008-06-27  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/tests/CMakeLists.txt
    * src/lib/tests/MarbleWidgetTest.cpp

    add a new Test for the MarbleWidget - simply try to run a basic MarbleWidget

2008-06-27  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/MarbleWidget.cpp

    add a default MapThemeId

2008-06-27  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PlaceMarkManager.cpp

    fix leakage of GeoNodes - the parser forced me to do it

2008-06-27  Patrick Spendrin    <ps_ml@gmx.de>

    * src/CMakeLists.txt

    fix build error on windows - MapThemeManager.cpp is in marbleWidget

2008-06-26  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/ExtDateTime.cpp:
    * src/lib/ExtDateTime.h:
    * src/lib/MergedLayerDecorator.cpp:
    * src/lib/MergedLayerDecorator.h:
    * src/lib/SunControlWidget.cpp:
    * src/lib/SunControlWidget.h:
    * src/lib/SunLocator.cpp:
    * src/lib/SunLocator.h:

    Fix krazy issues (missing email address).

2008-06-25  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarbleControlBox.h:
    * src/lib/MarbleControlBox.cpp:

    Fix includes.

2008-06-24  Torsten Rahn <rahn@kde.org>

    * src/plugins/marble/compass/CompassFloatItem.{cpp,h}:
    * src/lib/TextureTile.{cpp,h}:
    * src/lib/MarbleAbstractFloatItem.h:
    * src/lib/MarbleModel.cpp: